# yuri-spider

./: README.md  audio_tool.py  bili-items.json  book_tool.py  changpei-items.json  chengguang-items.json  clear_useless_author.py  copyright.py  cp_data_tool.py  drama_tool.py  fanjiao-items.json  game_tool.py  haitang-items.json  jjwxc-items.json  kuaikan-items.json  manbo-items.json  manhua_tool.py  maoer-items.json  nu-items.csv  nu-items.json  po-items.json  po18-items.json  popo-items.json  pyproject.toml  save-fanjiao-items.json  save-maoer-items.json  scrapy.cfg  spy_tool.py  tingji-items.json  yamibo-items.json
changpei/: items.json  scrapy.cfg
changpei/changpei/: items.py  middlewares.py  pipelines.py  settings.py
changpei/changpei/spiders/: cp.py
haitang/: items.json  scrapy.cfg
haitang/haitang/: items.py  middlewares.py  pipelines.py  settings.py
haitang/haitang/spiders/: haitang.py
jjyuri/: scrapy.cfg
jjyuri/jjyuri/: items.py  pipelines.py  settings.py
jjyuri/jjyuri/spiders/: yuri_spider.py
yuri/: middlewares.py  pipelines.py  settings.py
yuri/spiders/: chengguang-items.json  drama_spider.py  game_spider.py  manhua_spider.py  novel_spider.py  yuri_spider.py
